Fix title badge alignment and overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,9 +349,10 @@ main {
   background: var(--onyx);
   font-size: var(--fs-8);
   font-weight: var(--fw-300);
-  width: max-content;
+  width: fit-content;
   padding: 3px 12px;
   border-radius: 8px;
+  text-align: center;
 }
 
 .info_more-btn {
